[gd_scene load_steps=6 format=2]

[ext_resource path="res://GodotCredits.gd" type="Script" id=1]
[ext_resource path="res://ParallaxBackgroundCredits.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Music/FoxieEpic.OGG" type="AudioStream" id=3]
[ext_resource path="res://Assets/Buttons/Home_inv.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/Home.png" type="Texture" id=5]

[node name="GodotCredits" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Label" parent="CreditsContainer"]
anchor_right = 1.0
margin_left = -1280.0
margin_top = 1056.0
margin_right = -1280.0
margin_bottom = 1070.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
text = "Credits line"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="TextureButton" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 32.0
margin_top = 32.0
margin_right = 160.0
margin_bottom = 160.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
